cli/tests/commands/snapshots/commands__fixture__subvolume_get_flags_readonly.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs subvolume get-flags <MOUNT>/snap1
expression: "btrfs_ok(&[\"subvolume\", \"get-flags\", &snap1])"
---
readonly
