cli/tests/commands/snapshots/commands__fixture__subvolume_get_flags_writable.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs subvolume get-flags <MOUNT>/subvol1
expression: "btrfs_ok(&[\"subvolume\", \"get-flags\", &subvol])"
---
-
