cli/tests/commands/snapshots/commands__fixture__subvolume_list_json.snap
---
source: cli/tests/commands/fixture.rs
description: btrfs --format json subvolume list <MOUNT>
expression: "redact_paths(&btrfs_ok(&[\"--format\", \"json\", \"subvolume\", \"list\", mp]), &mnt,)"
---
{
  "__header": {
    "version": "1"
  },
  "subvolume-list": [
    {
      "generation": 9,
      "id": 256,
      "ogeneration": 9,
      "parent": 5,
      "parent_uuid": "-",
      "path": "subvol1",
      "readonly": false,
      "received_uuid": "-",
      "top_level": 5,
      "uuid": "63b095b9-2b65-ca41-87aa-a939e17e7679"
    },
    {
      "generation": 9,
      "id": 257,
      "ogeneration": 9,
      "parent": 5,
      "parent_uuid": "63b095b9-2b65-ca41-87aa-a939e17e7679",
      "path": "snap1",
      "readonly": false,
      "received_uuid": "-",
      "top_level": 5,
      "uuid": "b0de66fd-e22d-5740-a224-dcaf9fc946a5"
    },
    {
      "generation": 10,
      "id": 258,
      "ogeneration": 10,
      "parent": 5,
      "parent_uuid": "-",
      "path": "subvol2",
      "readonly": false,
      "received_uuid": "-",
      "top_level": 5,
      "uuid": "5503469b-a91d-b74b-86d6-ffda030ff1a4"
    }
  ]
}
